tests/snapshots/integration_test__log_data@772fb9f453b685035e33f8045ad194d1.snap
---
source: tests/integration_test.rs
expression: record
info: "type=USER_TTY msg=audit(1491922681.082:1065050): pid=28058 uid=0 auid=1000 ses=762 subj=unconfined_u:unconfined_r:unconfined_t:s0-s0:c0.c1023 data=7375202D20616E647265775F6B726F68"
---
{
  "record_type": "USER_TTY",
  "timestamp": 1491922681082,
  "id": 1065050,
  "fields": {
    "auid": 1000,
    "data": "7375202D20616E647265775F6B726F68",
    "pid": "28058",
    "ses": "762",
    "subj": "unconfined_u:unconfined_r:unconfined_t:s0-s0:c0.c1023",
    "uid": "root"
  }
}
