tests/snapshots/integration_test__log_data@77813443f1f6c41c5daf928be0203249.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/linux-audit-parser-rs/line-crypto-param-change-user.log:1"
expression: result
info: "type=CRYPTO_PARAM_CHANGE_USER msg=audit(1720042308.296:1823003): pid=2640 uid=0 auid=4294967295 ses=4294967295 msg='op=prng_seed kind=server bytes=6 source=/dev/urandom  exe=\"/usr/sbin/sshd\" hostname=? addr=? terminal=? res=success'\u001dUID=\"root\" AUID=\"unset\""
---
{
  "record_type": "CRYPTO_PARAM_CHANGE_USER",
  "timestamp": 1720042308296,
  "id": 1823003,
  "fields": {
    "auid": null,
    "msg": {
      "addr": null,
      "bytes": "6",
      "exe": "/usr/sbin/sshd",
      "hostname": null,
      "kind": "server",
      "op": "prng_seed",
      "res": "success",
      "source": "/dev/urandom",
      "terminal": null
    },
    "pid": "2640",
    "ses": "4294967295",
    "uid": "root"
  },
  "enrichment": {
    "AUID": "unset",
    "UID": "root"
  }
}
