tests/snapshots/integration_test__log_data@783e3af4b2aa0394d48c521a98abf341.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/go-libaudit/audit-rhel7.log:35"
expression: result
info: "type=USER_END msg=audit(1481077049.033:423): pid=1298 uid=0 auid=1000 ses=1 subj=system_u:system_r:sshd_t:s0-s0:c0.c1023 msg='op=login id=1000 exe=\"/usr/sbin/sshd\" hostname=? addr=? terminal=/dev/pts/0 res=success'"
---
{
  "record_type": "USER_END",
  "timestamp": 1481077049033,
  "id": 423,
  "fields": {
    "auid": 1000,
    "msg": {
      "addr": null,
      "exe": "/usr/sbin/sshd",
      "hostname": null,
      "id": 1000,
      "op": "login",
      "res": "success",
      "terminal": "/dev/pts/0"
    },
    "pid": "1298",
    "ses": "1",
    "subj": {
      "level": {
        "category": "c0.c1023",
        "sensitivity": "s0-s0"
      },
      "module": "SELinux",
      "role": "system_r",
      "type": "sshd_t",
      "user": "system_u"
    },
    "uid": "root"
  }
}
