tests/snapshots/integration_test__log_data@78f71c83cf4837f3b080c7cfdcd47bfd.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/linux-audit-parser-rs/line-usys-config.log:1"
expression: result
info: "type=USYS_CONFIG msg=audit(1724337072.493:467): pid=1876 uid=0 auid=4294967295 ses=4294967295 msg='op=change-system-time exe=\"/usr/sbin/hwclock\" hostname=? addr=? terminal=? res=failed'\u001dUID=\"root\" AUID=\"unset\""
---
{
  "record_type": "USYS_CONFIG",
  "timestamp": 1724337072493,
  "id": 467,
  "fields": {
    "auid": null,
    "msg": {
      "addr": null,
      "exe": "/usr/sbin/hwclock",
      "hostname": null,
      "op": "change-system-time",
      "res": "failed",
      "terminal": null
    },
    "pid": "1876",
    "ses": "4294967295",
    "uid": "root"
  },
  "enrichment": {
    "AUID": "unset",
    "UID": "root"
  }
}
