tests/snapshots/integration_test__log_data@79ca8c1acaaf74e4dcfdeebce3ec8667.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/linux-audit-parser-rs/line-software-update.log:1"
expression: result
info: "type=SOFTWARE_UPDATE msg=audit(1724947731.641:5836352): pid=3312968 uid=0 auid=4294967295 ses=4294967295 subj=kernel msg='op=install sw=\"yum-utils-4.0.21-25.el8.noarch\" sw_type=rpm key_enforce=0 gpg_res=1 root_dir=\"/\" comm=\"yum\" exe=\"/usr/libexec/platform-python3.6\" hostname=8da7ccbba3a1 addr=? terminal=pts/0 res=success'\u001dUID=\"root\" AUID=\"unset\""
---
{
  "record_type": "SOFTWARE_UPDATE",
  "timestamp": 1724947731641,
  "id": 5836352,
  "fields": {
    "auid": null,
    "msg": {
      "addr": null,
      "comm": "yum",
      "exe": "/usr/libexec/platform-python3.6",
      "gpg_res": "1",
      "hostname": "8da7ccbba3a1",
      "key_enforce": "0",
      "op": "install",
      "res": "success",
      "root_dir": "/",
      "sw": "yum-utils-4.0.21-25.el8.noarch",
      "sw_type": "rpm",
      "terminal": "pts/0"
    },
    "pid": "3312968",
    "ses": "4294967295",
    "subj": "kernel",
    "uid": "root"
  },
  "enrichment": {
    "AUID": "unset",
    "UID": "root"
  }
}
