tests/snapshots/integration_test__log_data@7a0582fdb5289617a633758b3fd24cbb-2.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/go-libaudit/test.log:9"
expression: result
info: "type=PROCTITLE msg=audit(1170021601.343:296): proctitle=\"(systemd)\""
---
{
  "record_type": "PROCTITLE",
  "timestamp": 1170021601343,
  "id": 296,
  "fields": {
    "proctitle": "(systemd)"
  }
}
